# rustybuns

./: .gitignore  CONTINUATION.md  LICENSE  PROGRESS.md  README.md  SPEC.md
.github/workflows/: ci.yml
controller/: package.json  tsconfig.json
controller/src/: db.ts  index.ts  session.ts  task.ts  telemetry.ts
implant/: Cargo.toml
implant/src/: main.rs
implant/src/platform/: mod.rs  task.rs  unix.rs  windows.rs
implant/src/transport/: https.rs  mod.rs
